syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package address;

service Geocoder {
  rpc GetAddress (GeocoderRequest) returns (GeocoderReply) {}
  rpc GetAddressError (GeocoderRequest) returns (GeocoderReply) {}
}

message GeocoderRequest {
  int32 lat = 1;
  int32 lon = 2;
}

message GeocoderReply {
  string address = 1;
}
